finish model training

--- a/train.ipynb
+++ b/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +18,13 @@
     "import torch.nn as nn\n",
     "import random\n",
     "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset\n",
+    "import pandas as pd\n",
     "\n",
     "# known phonemes/graphemes\n",
-    "phonemes = [\n",
-    "    '0',\n",
-    "    'ō', \n",
-    "    'ē',\n",
-    "    'f',\n",
-    "    '1'\n",
-    "]\n",
+    "phonemes = ['0', '1', 'a', 'ä', 'ɑ', 'ɒ', 'æ', 'b', 'ḇ', 'β', 'c', 'č', 'ɔ', 'ɕ', 'ç', 'd', 'ḏ', 'ḍ', 'ð', 'e', 'ə', 'ɚ', 'ɛ', 'ɝ', 'f', 'g', 'ḡ', 'h', 'ʰ', 'ḥ', 'ḫ', 'ẖ', 'i', 'ɪ', 'ỉ', 'ɨ', 'j', 'ʲ', 'ǰ', 'k', 'ḳ', 'ḵ', 'l', 'ḷ', 'ɬ', 'ɫ', 'm', 'n', 'ŋ', 'ṇ', 'ɲ', 'ɴ', 'o', 'ŏ', 'ɸ', 'θ', 'p', 'p', '̅', 'þ', 'q', 'r', 'ɹ', 'ɾ', 'ʀ', 'ʁ', 'ṛ', 's', 'š', 'ś', 'ṣ', 'ʃ', 't', 'ṭ', 'ṯ', 'ʨ', 't', 'ʂ', 'u', 'ʊ', 'ŭ', 'ü', 'v', 'ʌ', 'ɣ', 'w', 'ʍ', 'x', 'χ', 'y', 'ʸ', 'ʎ', 'z', 'ẓ', 'ž', 'ʒ', 'ʔ', 'ʕ']\n",
     "\n",
-    "graphemes = [\n",
-    "    '0', 'a', 'b', '1'\n",
-    "]\n",
+    "graphemes = ['0', '1', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
     "\n",
     "# one hot encodes the word: returns an array of one hot encoded characters\n",
     "def nemes_to_1_hot_seq(string, nemes=\"phonemes\"):\n",
@@ -42,12 +36,31 @@
     "        vec[l.index(i)] = 1\n",
     "        seq.append(vec)\n",
     "\n",
-    "    return torch.FloatTensor([seq])\n"
+    "    return torch.FloatTensor([seq])\n",
+    "\n",
+    "def one_hot_to_nemes(arr, nemes=\"phonemes\"):\n",
+    "    seq = []\n",
+    "    l = phonemes if nemes == \"phonemes\" else graphemes\n",
+    "    for hot in arr:\n",
+    "        x = torch.argmax(hot)\n",
+    "        seq.append(l[x])\n",
+    "    return seq\n",
+    "\n",
+    "class P2GDataset(Dataset):\n",
+    "    def __init__(self, phoneme_file):\n",
+    "        self.data = pd.read_csv(phoneme_file, header=None)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        p, g = self.data.iloc[idx]\n",
+    "        return nemes_to_1_hot_seq(p, nemes = \"phonemes\"), nemes_to_1_hot_seq(g, nemes = \"graphemes\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +124,25 @@
     "                input[0][0][x] = 1\n",
     "                \n",
     "        return outputs\n",
-    "        "
+    "\n",
+    "    def pred_new(self, in_seq):\n",
+    "        hidden = self.encoder(in_seq)\n",
+    "        input = torch.FloatTensor(1, 1, len(graphemes))\n",
+    "        outs = []\n",
+    "        while True:\n",
+    "            out, hidden = self.decoder(input, hidden)\n",
+    "            outs.append(out)\n",
+    "            x = input.argmax(1)[0]\n",
+    "            input = torch.zeros(1, 1, len(graphemes))\n",
+    "            input[0][0][x] = 1\n",
+    "            if one_hot_to_nemes(out) == ['1']:\n",
+    "                break\n",
+    "        return outs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -125,32 +151,19 @@
      "text": [
       "seq2seq(\n",
       "  (encoder): Encoder(\n",
-      "    (encoder): GRU(5, 512, batch_first=True)\n",
+      "    (encoder): GRU(98, 512, batch_first=True)\n",
       "  )\n",
       "  (decoder): Decoder(\n",
-      "    (decoder): GRU(4, 512, batch_first=True)\n",
-      "    (fc): Linear(in_features=512, out_features=4, bias=True)\n",
+      "    (decoder): GRU(28, 512, batch_first=True)\n",
+      "    (fc): Linear(in_features=512, out_features=28, bias=True)\n",
       "  )\n",
-      ")\n",
-      "tensor([[-0.0344, -0.0213, -0.0112,  0.0098],\n",
-      "        [-0.0370, -0.0186, -0.0226, -0.0061]], grad_fn=<SqueezeBackward1>)\n",
-      "torch.Size([2, 4])\n"
+      ")\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1.3824, grad_fn=<NllLossBackward0>)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"training\"\"\"\n",
-    "\n",
+    "from torch.utils.data import DataLoader\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "EPOCHS = 100\n",
     "model = seq2seq(device)\n",
@@ -158,44 +171,52 @@
     "print(model)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
     "loss_func = nn.CrossEntropyLoss()\n",
-    "\n",
-    "in_seq = nemes_to_1_hot_seq(\"ōō\")\n",
-    "out_seq = nemes_to_1_hot_seq(\"a\", \"graphemes\")\n",
-    "\n",
-    "\n",
-    "model_output = model(in_seq, out_seq)\n",
-    "# get rid of first items because they are the start token,\n",
-    "# which shouldnt be included in loss\n",
-    "model_output = model_output[1:]\n",
-    "model_output = model_output.squeeze(1)\n",
-    "out_seq = out_seq[1:]\n",
-    "print(model_output)\n",
-    "print(model_output.shape)\n",
-    "loss = loss_func(model_output, torch.LongTensor([1, 3]))\n",
-    "loss.backward()\n",
-    "optimizer.step()\n",
-    "loss.clear()\n",
-    "\n",
-    "# print(model(in_seq, out_seq))\n",
-    "# print(out_seq)\n",
-    "\n",
-    "# loss_func(model(in_seq, out_seq).squeeze(0), torch.FloatTensor(0, 1, 1))\n",
-    "# dataset OBJ!\n",
-    "\n",
-    "# for epoch in range(EPOCHS):\n",
-    "#     for (in_seq, out_seq) in dataloader():\n",
-    "#         outputs = model(in_seq, out_seq)\n",
-    "# print(x(nemes_to_1_hot_seq(\"ff\"), nemes_to_1_hot_seq('a', \"graphemes\")))\n"
+    "dataset = P2GDataset(\"data.csv\")\n",
+    "dataloader = DataLoader(dataset=dataset, batch_size=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_graphemes(phonemes):\n",
-    "    "
+    "\n",
+    "for epoch in range(100):\n",
+    "    for (in_seq, out_seq) in dataloader:\n",
+    "        in_seq = in_seq.squeeze(0)\n",
+    "        out_seq = out_seq.squeeze(0)\n",
+    "        model_output = model(in_seq, out_seq)\n",
+    "        model_output = model_output[1:]\n",
+    "        model_output = model_output.squeeze(1)\n",
+    "        out_seq = out_seq.squeeze(0)[1:]\n",
+    "        loss = loss_func(model_output, out_seq)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d', 'a', 'u', 'g', 'h', 't', 'e', 'r', '1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_preds(path):\n",
+    "    dataset = P2GDataset(path)\n",
+    "    p, g = dataset[0]\n",
+    "    s = model.pred_new(p)\n",
+    "    print(one_hot_to_nemes(s, \"graphemes\"))\n",
+    "print_preds(\"data.csv\")\n",
+    "# print(one_hot_to_graphemes(torch.FloatTensor([[3,2,1],[0,0,1],[0,0,1]])))"
    ]
   }
  ],
