good data, trainable model

--- a/train.ipynb
+++ b/train.ipynb
@@ -10,9 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '1', 's', 'ə', 'b', 't', 'ō', 'ᵊ', 'l', 'ī', 'r', 'i', 'v', 'm', 'd', 'ä', 'h', 'y', 'ü', 'a', 'ē', 'p', 'n', 'e', 'k', 'j', 'ŋ', 'g', 'z', 'u', '̇', 'c', 'ȯ', 'w', 'f', 'ā', 'ḵ', '͟']\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -21,8 +29,28 @@
     "from torch.utils.data import Dataset\n",
     "import pandas as pd\n",
     "\n",
+    "# find phoneme vocabulary\n",
+    "data = pd.read_csv(\"phonemes-words.csv\")\n",
+    "phonemes_col = data[\"phonemes\"]\n",
+    "phonemes = ['0', '1']\n",
+    "\n",
+    "for word in phonemes_col:\n",
+    "    for phoneme in word:\n",
+    "        if phoneme not in phonemes:\n",
+    "            phonemes.append(phoneme)\n",
+    "print(phonemes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
     "# known phonemes/graphemes\n",
-    "phonemes = ['0', '1', 'a', 'ä', 'ɑ', 'ɒ', 'æ', 'b', 'ḇ', 'β', 'c', 'č', 'ɔ', 'ɕ', 'ç', 'd', 'ḏ', 'ḍ', 'ð', 'e', 'ə', 'ɚ', 'ɛ', 'ɝ', 'f', 'g', 'ḡ', 'h', 'ʰ', 'ḥ', 'ḫ', 'ẖ', 'i', 'ɪ', 'ỉ', 'ɨ', 'j', 'ʲ', 'ǰ', 'k', 'ḳ', 'ḵ', 'l', 'ḷ', 'ɬ', 'ɫ', 'm', 'n', 'ŋ', 'ṇ', 'ɲ', 'ɴ', 'o', 'ŏ', 'ɸ', 'θ', 'p', 'p', '̅', 'þ', 'q', 'r', 'ɹ', 'ɾ', 'ʀ', 'ʁ', 'ṛ', 's', 'š', 'ś', 'ṣ', 'ʃ', 't', 'ṭ', 'ṯ', 'ʨ', 't', 'ʂ', 'u', 'ʊ', 'ŭ', 'ü', 'v', 'ʌ', 'ɣ', 'w', 'ʍ', 'x', 'χ', 'y', 'ʸ', 'ʎ', 'z', 'ẓ', 'ž', 'ʒ', 'ʔ', 'ʕ']\n",
+    "# phonemes = ['0', '1', 'ᵊ', 'ə̇', 'ȯ', 'ē', 'ī', 'ō', 'a', 'ä', 'ɑ', 'ɒ', 'æ', 'b', 'ḇ', 'β', 'c', 'č', 'ɔ', 'ɕ', 'ç', 'd', 'ḏ', 'ḍ', 'ð', 'e', 'ə', 'ɚ', 'ɛ', 'ɝ', 'f', 'g', 'ḡ', 'h', 'ʰ', 'ḥ', 'ḫ', 'ẖ', 'i', 'ɪ', 'ỉ', 'ɨ', 'j', 'ʲ', 'ǰ', 'k', 'ḳ', 'ḵ', 'l', 'ḷ', 'ɬ', 'ɫ', 'm', 'n', 'ŋ', 'ṇ', 'ɲ', 'ɴ', 'o', 'ŏ', 'ɸ', 'θ', 'p', 'p', '̅', 'þ', 'q', 'r', 'ɹ', 'ɾ', 'ʀ', 'ʁ', 'ṛ', 's', 'š', 'ś', 'ṣ', 'ʃ', 't', 'ṭ', 'ṯ', 'ʨ', 't', 'ʂ', 'u', 'ʊ', 'ŭ', 'ü', 'v', 'ʌ', 'ɣ', 'w', 'ʍ', 'x', 'χ', 'y', 'ʸ', 'ʎ', 'z', 'ẓ', 'ž', 'ʒ', 'ʔ', 'ʕ']\n",
     "\n",
     "graphemes = ['0', '1', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
     "\n",
@@ -60,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +96,7 @@
     "class Encoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.encoder = nn.GRU(len(phonemes), 512, 1, batch_first=True, bidirectional=False)\n",
+    "        self.encoder = nn.GRU(len(phonemes), 2048, 1, batch_first=True, bidirectional=False)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        # push vector through encoder\n",
@@ -80,8 +108,12 @@
     "class Decoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.decoder = nn.GRU(len(graphemes), 512, 1, batch_first=True, bidirectional=False)\n",
-    "        self.fc = nn.Linear(512, len(graphemes))\n",
+    "        self.decoder = nn.GRU(len(graphemes), 2048, 1, batch_first=True, bidirectional=False)\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(2048, 1024),\n",
+    "            nn.Linear(1024, len(graphemes))\n",
+    "        )\n",
+    "        \n",
     "\n",
     "    def forward(self, input, hidden_layer):\n",
     "        \"\"\"\n",
@@ -127,7 +159,7 @@
     "\n",
     "    def pred_new(self, in_seq):\n",
     "        hidden = self.encoder(in_seq)\n",
-    "        input = torch.FloatTensor(1, 1, len(graphemes))\n",
+    "        input = torch.zeros(1, 1, len(graphemes))\n",
     "        outs = []\n",
     "        while True:\n",
     "            out, hidden = self.decoder(input, hidden)\n",
@@ -142,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -151,18 +183,23 @@
      "text": [
       "seq2seq(\n",
       "  (encoder): Encoder(\n",
-      "    (encoder): GRU(98, 512, batch_first=True)\n",
+      "    (encoder): GRU(38, 2048, batch_first=True)\n",
       "  )\n",
       "  (decoder): Decoder(\n",
-      "    (decoder): GRU(28, 512, batch_first=True)\n",
-      "    (fc): Linear(in_features=512, out_features=28, bias=True)\n",
+      "    (decoder): GRU(28, 2048, batch_first=True)\n",
+      "    (fc): Sequential(\n",
+      "      (0): Linear(in_features=2048, out_features=1024, bias=True)\n",
+      "      (1): Linear(in_features=1024, out_features=28, bias=True)\n",
+      "    )\n",
       "  )\n",
-      ")\n"
+      ")\n",
+      "4\n"
      ]
     }
    ],
    "source": [
     "\"\"\"training\"\"\"\n",
+    "from torch.utils.data import random_split\n",
     "from torch.utils.data import DataLoader\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "EPOCHS = 100\n",
@@ -171,18 +208,103 @@
     "print(model)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
     "loss_func = nn.CrossEntropyLoss()\n",
-    "dataset = P2GDataset(\"data.csv\")\n",
-    "dataloader = DataLoader(dataset=dataset, batch_size=1)\n"
+    "dataset = P2GDataset(\"phonemes-words.csv\")\n",
+    "train, test = random_split(dataset, [100, len(dataset)-100])\n",
+    "dataloader = DataLoader(dataset=train, batch_size=1)\n",
+    "print(len(train))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 278,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3221163153648376\n",
+      "3.2708892226219177\n",
+      "3.201585054397583\n",
+      "3.079297184944153\n",
+      "2.8465216159820557\n",
+      "2.7089841961860657\n",
+      "2.5153560042381287\n",
+      "2.462839186191559\n",
+      "2.4048062562942505\n",
+      "2.343404471874237\n",
+      "2.2618715167045593\n",
+      "2.157208651304245\n",
+      "2.0664122104644775\n",
+      "2.017159879207611\n",
+      "1.9561673402786255\n",
+      "1.9156756401062012\n",
+      "1.8750565648078918\n",
+      "1.8571637272834778\n",
+      "1.8040289878845215\n",
+      "1.7984676957130432\n",
+      "1.7435909807682037\n",
+      "1.8401980102062225\n",
+      "1.6572427153587341\n",
+      "1.6717987060546875\n",
+      "1.582443505525589\n",
+      "1.5349659025669098\n",
+      "1.506835013628006\n",
+      "1.4489192366600037\n",
+      "1.4294407367706299\n",
+      "1.315350592136383\n",
+      "1.2721288800239563\n",
+      "1.2115438431501389\n",
+      "1.1813770234584808\n",
+      "1.1066882610321045\n",
+      "1.0837684124708176\n",
+      "1.002344235777855\n",
+      "1.0130640268325806\n",
+      "0.9273332059383392\n",
+      "0.9591424614191055\n",
+      "0.8267364948987961\n",
+      "0.88326495885849\n",
+      "0.7914309576153755\n",
+      "0.8708502948284149\n",
+      "0.7478144615888596\n",
+      "0.650847390294075\n",
+      "0.6428801491856575\n",
+      "0.6119379103183746\n",
+      "0.554174043238163\n",
+      "0.4900366812944412\n",
+      "0.47804349660873413\n",
+      "0.4236934594810009\n",
+      "0.3837178274989128\n",
+      "0.3570425473153591\n",
+      "0.3130902051925659\n",
+      "0.2858997229486704\n",
+      "0.2458946891129017\n",
+      "0.21430684439837933\n",
+      "0.1864163987338543\n",
+      "0.15991878695786\n",
+      "0.13489226065576077\n",
+      "0.11870928294956684\n",
+      "0.10267789848148823\n",
+      "0.09097563661634922\n",
+      "0.0797990458086133\n",
+      "0.07233704160898924\n",
+      "0.06642685271799564\n",
+      "0.06097072549164295\n",
+      "0.05501845758408308\n",
+      "0.05152295343577862\n",
+      "0.04732133448123932\n",
+      "0.04416750092059374\n",
+      "0.04060295596718788\n",
+      "0.037727680522948503\n",
+      "0.035696943290531635\n",
+      "0.03388279117643833\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "for epoch in range(100):\n",
+    "avg_losses = []\n",
+    "for epoch in range(75):\n",
+    "    tot_loss = 0\n",
     "    for (in_seq, out_seq) in dataloader:\n",
     "        in_seq = in_seq.squeeze(0)\n",
     "        out_seq = out_seq.squeeze(0)\n",
@@ -191,31 +313,90 @@
     "        model_output = model_output.squeeze(1)\n",
     "        out_seq = out_seq.squeeze(0)[1:]\n",
     "        loss = loss_func(model_output, out_seq)\n",
+    "        tot_loss+=loss.detach().item()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        optimizer.zero_grad()\n"
+    "        optimizer.zero_grad()\n",
+    "    tot_loss/=len(dataset)\n",
+    "    print(tot_loss)\n",
+    "    avg_losses.append(tot_loss)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['d', 'a', 'u', 'g', 'h', 't', 'e', 'r', '1']\n"
+      "['0', 'b', 'ä', 'r', 'b', 'ü', 'd', 'ō', '1']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 9, 38])"
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = P2GDataset(\"data.csv\")\n",
+    "p, g = dataset[1]\n",
+    "\n",
+    "print(one_hot_to_nemes(p[0], \"phonemes\"))\n",
+    "p.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/yj/w4y5s1bd3z55tr6692mv9g5c0000gn/T/ipykernel_8146/3253067113.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;31m# print_preds(\"data.csv\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# get_0_1_accuracy(test, model)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;31m# print(one_hot_to_graphemes(torch.FloatTensor([[3,2,1],[0,0,1],[0,0,1]])))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/AI-Judge/lib/python3.9/site-packages/torch/utils/data/dataset.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    361\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    362\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 363\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    364\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    365\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__len__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
+    "def get_0_1_accuracy(test_set, model):\n",
+    "    correct = 0\n",
+    "    print(len(test_set))\n",
+    "    dataloader = DataLoader(dataset=test_set, batch_size=1)\n",
+    "    for (in_seq, out_seq) in dataloader:\n",
+    "        prediction = model.pred_new(in_seq)\n",
+    "        print(prediction)\n",
+    "        print(out_seq)\n",
+    "        if prediction == out_seq:\n",
+    "            correct+= 1\n",
+    "    if correct == 0:\n",
+    "        return correct\n",
+    "    return correct/len(test_set)\n",
+    "\n",
     "def print_preds(path):\n",
-    "    dataset = P2GDataset(path)\n",
-    "    p, g = dataset[0]\n",
+    "    global p\n",
+    "    print(one_hot_to_nemes(p[0], \"phonemes\"))\n",
     "    s = model.pred_new(p)\n",
+    "    \n",
     "    print(one_hot_to_nemes(s, \"graphemes\"))\n",
-    "print_preds(\"data.csv\")\n",
+    "\n",
+    "# print_preds(\"data.csv\")\n",
+    "# get_0_1_accuracy(test, model)\n",
+    "print(test[0])\n",
     "# print(one_hot_to_graphemes(torch.FloatTensor([[3,2,1],[0,0,1],[0,0,1]])))"
    ]
   }
