--- a/train.ipynb
+++ b/train.ipynb
@@ -274,7 +274,7 @@
    "cell_type": "code",
    "execution_count": 165,
    "source": [
-    "model.eval()\r\n",
+    "model.train()\r\n",
     "def get_0_1_accuracy(test_set, model):\r\n",
     "    correct = 0\r\n",
     "    dataloader = DataLoader(dataset=test_set, batch_size=1)\r\n",
