resources and arch desc

--- a/train.ipynb
+++ b/train.ipynb
@@ -5,7 +5,41 @@
    "metadata": {},
    "source": [
     "# Phoneme to Grapheme Conversion with a Recurrent Generative Model \n",
+    "We hope the reader will appreciate the attempts at humor built in for subjective reasons.\n",
     "This project will discuss..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Architecture\n",
+    "The model change signifigantly over time. We tried the following combinations:\n",
+    "\n",
+    "Single layer GRU encoder+decoder\n",
+    "\n",
+    "Double/Triple stacked GRU encoder+decoder\n",
+    "\n",
+    "Single layer LSTM encoder+decoder\n",
+    "\n",
+    "We also varied hidden sizes, testing 512 or 1024\n",
+    "\n",
+    "We settled on the following architecture (hidden size 512):\n",
+    "\n",
+    "Double bidirectional stacked GRU encoder -> linear layer which accepts the last forward/backward hidden layers and converts them to a vector the size of a single hidden layer -> unstacked unidirectional GRU decoder with Bahdanau attention.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resources\n",
+    "For learning the basics of RNNs, LSTMs, GRUs, attention (including Bahdanau), and seq2seq architectures, these resources are good:\n",
+    "https://www.deeplearningbook.org/contents/rnn.html\n",
+    "https://d2l.ai/chapter_recurrent-modern/seq2seq.html\n",
+    "https://d2l.ai/chapter_attention-mechanisms/bahdanau-attention.html\n",
+    "For more comprehensive tutorials that walk through the full deep learning process (including varied seq2seq architectures such as transformer), this is a good resource:\n",
+    "https://github.com/bentrevett/pytorch-seq2seq\n"
    ]
   },
   {
