--- a/train.ipynb
+++ b/train.ipynb
@@ -61,32 +61,35 @@
     }
    ],
    "source": [
+    "# necessary imports\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import random\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset\n",
-    "import pandas as pd\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
     "import torch.nn.functional as F\n",
+    "from torch.utils.data import Dataset\n",
+    "import random\n",
+    "import pandas as pd\n",
+    "# for logging\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
-    "# find phoneme vocabulary\n",
+    "# compute phoneme/grapheme vocabularies\n",
     "data = pd.read_csv(\"phonemes-words.csv\")\n",
     "phonemes_col = data[\"phonemes\"]\n",
     "graphemes_col = data[\"graphemes\"]\n",
+    "# vocabularies contain 0 and 1 as start and end tokens\n",
     "phonemes = ['0', '1']\n",
     "graphemes = ['0', '1']\n",
     "\n",
     "for word in phonemes_col:\n",
-    "    # print(word)\n",
     "    for phoneme in word:\n",
     "        if phoneme not in phonemes:\n",
     "            phonemes.append(phoneme)\n",
     "for word in graphemes_col:\n",
-    "    # print(word)\n",
     "    for grapheme in word:\n",
     "        if grapheme not in graphemes:\n",
     "            graphemes.append(grapheme)\n",
+    "            \n",
+    "# wow, there are lot of different phonemes!\n",
     "print(phonemes)"
    ]
   },
@@ -97,8 +100,11 @@
    "outputs": [],
    "source": [
     "\n",
-    "# one hot encodes the word: returns an array of one hot encoded characters\n",
     "def nemes_to_1_hot_seq(string, nemes=\"phonemes\"):\n",
+    "    \"\"\"one hot encodes the word according to either\n",
+    "    the phoneme or grapheme list\n",
+    "        ::returns:: pytorch tensor of one hot encoded characters\n",
+    "    \"\"\"\n",
     "    string = '0' + string + '1'\n",
     "    l = phonemes if nemes == \"phonemes\" else graphemes\n",
     "    seq = []\n",
@@ -110,6 +116,7 @@
     "    return torch.FloatTensor([seq])\n",
     "\n",
     "def one_hot_to_nemes(arr, nemes=\"phonemes\"):\n",
+    "    \"\"\"converts a 1-hot encoding back to characters\"\"\"\n",
     "    seq = []\n",
     "    l = phonemes if nemes == \"phonemes\" else graphemes\n",
     "    for hot in arr:\n",
