--- a/train.ipynb
+++ b/train.ipynb
@@ -124,11 +124,14 @@
     "        seq.append(l[x])\n",
     "    return seq\n",
     "\n",
+    "\n",
     "class P2GDataset(Dataset):\n",
+    "    \"\"\"Pytorch dataset object for sampling the dataset\"\"\"\n",
     "    def __init__(self, phoneme_file, device):\n",
     "        df = pd.read_csv(phoneme_file)\n",
+    "        # currently removing words whose phoneme sequence is longer than\n",
+    "        # 7 chars for performance reasons\n",
     "        self.data = df.drop(df[df[\"phonemes\"].map(len) > 7].index)\n",
-    "\n",
     "        self.device = device\n",
     "\n",
     "    def __len__(self):\n",
@@ -136,6 +139,7 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        p, g = self.data.iloc[idx]\n",
+    "        # 1-hot encoding\n",
     "        return nemes_to_1_hot_seq(p, nemes = \"phonemes\").to(self.device), nemes_to_1_hot_seq(g, nemes = \"graphemes\").long()\n"
    ]
   },
@@ -145,6 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# hidden layer size\n",
     "layer_size = 512\n",
     "# define model architecture\n",
     "class Encoder(nn.Module):\n",
@@ -164,7 +169,6 @@
     "        # we want to grab the \"highest\" layers from the forwards and backwards directions\n",
     "        # dim 1 because hidden[3] and hidden[4] are both [1, layer_size] and we \n",
     "        # want a single batch that has 2*layer_size values\n",
-    "        # print(hidden.shape)\n",
     "        hc = torch.cat((hidden[2], hidden[3]), dim=1)\n",
     "        hidden_for_init = self.fc(hc)\n",
     "\n",
