--- a/train.ipynb
+++ b/train.ipynb
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['0', '1', 'k', 'y', 'ʊ', 'r', 'ɑ', 'a', 'ɪ', 'z', 'æ', 't', 'ə', 'b', 'n', 'u', 'l', 'm', 'ɛ', 'd', 'e', 'ʃ', 's', 'ʌ', 'g', 'f', 'o', 'θ', 'ɒ', 'i', 'ʒ', 'p', 'ɔ', 'v', 'ː', 'h', 'ŋ', 'w', '̃', 'ɡ', 'j', 'ɜ', 'ð', 'ʰ', 'x', 'c', 'œ', 'ü', 'ɘ', 'ø', 'ĩ']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# necessary imports\n",
     "import torch\n",
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +85,7 @@
     "    \"\"\"Pytorch dataset object for sampling the dataset\"\"\"\n",
     "    def __init__(self, phoneme_file, device):\n",
     "        df = pd.read_csv(phoneme_file)\n",
-    "        # currently removing words whose phoneme sequence is longer than\n",
-    "        # 7 chars for performance reasons\n",
-    "        self.data = df.drop(df[df[\"phonemes\"].map(len) > 7].index)\n",
+    "        self.data = df\n",
     "        self.device = device\n",
     "\n",
     "    def __len__(self):\n",
@@ -129,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,11 +298,11 @@
     "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
     "loss_func = nn.CrossEntropyLoss()\n",
     "dataset = P2GDataset(\"phonemes-words.csv\", device)\n",
-    "# train on 35000 words\n",
-    "train, test = random_split(dataset, [35000, len(dataset)-35000])\n",
+    "# train on 70000 words\n",
+    "train, test = random_split(dataset, [70000, len(dataset)-70000])\n",
     "dataloader = DataLoader(dataset=train, batch_size=1)\n",
     "print(\"train size \", len(train))\n",
-    "print(\"train size \", len(test))\n",
+    "print(\"test size \", len(test))\n",
     "\n",
     "def get_0_1_accuracy(test_set, model):\n",
     "    \"\"\"method to compute 1-WER accuracy AKA what % of test_set does model get\n",
@@ -335,17 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10221868\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"# of model parameters: \", sum(p.numel() for p in model.parameters()))"
    ]
@@ -354,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wow 10 million params! This model has more trainable parameters than tons of potatoes France produces per year (absolutely no semantic relation). This might take a while to train, so make sure to use a NVIDIA GeForce RTX 2080 Ti :)."
+    "Wow 10 million params! This model has more trainable parameters than tonnes of potatoes France produced in 2016! (absolutely no semantic relation). This might take a while to train, so make sure to use a NVIDIA GeForce RTX 2080 Ti :)."
    ]
   },
   {
@@ -427,28 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Parameter containing:\n",
-       "tensor([[-0.7538,  0.1556,  0.0660,  ..., -0.0320, -0.0349, -0.0978],\n",
-       "        [-0.0865,  0.0106, -0.2135,  ...,  0.0184,  0.0110,  0.0298],\n",
-       "        [ 0.1121, -0.0444, -0.1053,  ...,  0.0754, -0.0277,  0.0016],\n",
-       "        ...,\n",
-       "        [-0.1423,  0.2361, -0.6792,  ...,  0.0250, -0.0080, -0.0016],\n",
-       "        [ 0.0889,  0.2124,  0.0398,  ..., -0.0352,  0.0361, -0.0685],\n",
-       "        [-0.2383,  0.0234, -0.0281,  ...,  0.0096, -0.0413, -0.0148]],\n",
-       "       device='cuda:0', requires_grad=True)"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.encoder.encoder.weight_ih_l0"
    ]
@@ -498,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
