--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Separate the file by lines to retrieve the length\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# This is the main function to get the urls of size \"size\", returns a list of urls pointing dictionary words+phonetics\n",
@@ -212,34 +212,12 @@
     "        print(\"Return Set Length: \" + str(len(return_set)))\n",
     "        return_set.update(get_urls(size - len(return_set)))\n",
     "\n",
-    "    return return_set # Returns\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [
-    "total_failed = 0  # Uses this variable to track number of items that fail."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
+    "    return return_set # Returns\n",
+    "\n",
+    "\n",
+    "\n",
+    "total_failed = 0  # Uses this variable to track number of items that fail.\n",
+    "\n",
     "\"\"\"\n",
     "Takes a html page and word as a parameter to parse and retrieve the word on the page and phonetics.\n",
     "\"\"\"\n",
@@ -315,38 +293,13 @@
     "\n",
     "        else:\n",
     "            # If the adding part does succeed, then add word to error list\n",
-    "            add_err()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [],
-   "source": [
+    "            add_err()\n",
     "# This method is used to request and process one url at a time\n",
     "def get_one(url):\n",
     "    curr_page = requests.get(url)\n",
     "    get_word(curr_page, url.replace(base_url, \"\"))\n",
-    "    return curr_page.raise_for_status()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [
+    "    return curr_page.raise_for_status()\n",
+    "\n",
     "#   The concurrent method used to retrieve all urls at a maximum rate of 20 requests\n",
     "def get_all(urls):\n",
     "    with concurrent.futures.ThreadPoolExecutor(max_workers=20) as executor:\n",
@@ -357,20 +310,8 @@
     "        if fut.exception() is not None:\n",
     "            print('{}: {}'.format(fut.exception(), 'ERR'))\n",
     "        else:\n",
-    "            print('{}: {}'.format(fut.result(), 'OK'))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [],
-   "source": [
+    "            print('{}: {}'.format(fut.result(), 'OK'))\n",
+    "\n",
     "\"\"\"\n",
     "This function removes any invalid characters, words, repeat elements, and fixes the formatting of words,\n",
     "accounts for edge cases, and fixes as much data as it can before writing it to the file or removing the data\n",
@@ -490,20 +431,8 @@
     "    new_len = set(dict_list) - curr_words # number of words remaining\n",
     "    # print(str(len(dict_list)) + \",\" + str(len(new_len)) + \",\" + str(len(new_len - err)))\n",
     "    dict_list = list((set(dict_list) - curr_words) - err) # Update the global list of remaining words\n",
-    "    return final_set # Return the set of words remaining in the phonemes-words csv"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [],
-   "source": [
+    "    return final_set # Return the set of words remaining in the phonemes-words csv\n",
+    "\n",
     "times_phon_was_run = 0 # Numebr of times the phon function was run.\n",
     "\n",
     "\n",
@@ -533,53 +462,19 @@
     "        remove_invalids() # remove any and all invalid elements\n",
     "\n",
     "    urls = get_urls(size - rounds * group_size) # acquire remaining urs, since there will likely be a remainder.\n",
-    "    get_all(urls) # get all of the remaining urls after all group sizes have been reached."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
-   "source": [
+    "    get_all(urls) # get all of the remaining urls after all group sizes have been reached.\n",
+    "\n",
     "fixed_set = remove_invalids()  # Removes around 99.9% of current invalid lines before attempting to acquire new words\n",
     "phon(new_size + total_failed)  # Run the main function\n",
-    "fixed_set = remove_invalids()  # Remove invalids returns all items currently in the phonetics list"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "fixed_set = remove_invalids()  # Remove invalids returns all items currently in the phonetics list\n",
+    "\n",
+    "\n",
     "# Keep repeating the process of getting phoneme_words until all phonetics are reached.\n",
     "while len(fixed_set) < original_size:\n",
     "    phon(original_size - len(fixed_set))\n",
-    "    fixed_set = remove_invalids()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "    fixed_set = remove_invalids()\n",
+    "\n",
+    "\n",
     "# Log the total time the function took to run.\n",
     "total_time = time.time() - start_time\n",
     "print(total_time)\n",
@@ -587,20 +482,8 @@
     "# Store the time in the timing document, used to optimize the functions and decrease runtime.\n",
     "time_file = codecs.open(\"conc_timing.txt\", \"a\")\n",
     "time_file.write(str(total_time) + \"\\n\")\n",
-    "time_file.close()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "time_file.close()\n",
+    "\n",
     "# Update the words_beta.txt and error by subtracting all words that do not work.\n",
     "a_dict = set(codecs.open(\"words_alpha.txt\", \"r\", \"utf-8-sig\").read().replace(\"\\r\", \"\").split(\"\\n\"))\n",
     "b_write = codecs.open(dict_filename, \"w\", \"utf-8-sig\")\n",
